objects/Standard_Plan_Discount__mdt.object
<CustomObject>
    <fields>
        <fullName>Factory_Scratch__c</fullName>
        <label>Factory Scratch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photchormatic_for_Adults__c</fullName>
        <label>Photchormatic for Adults</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photchromatic_for_Kids__c</fullName>
        <label>Photchromatic for Kids</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Polycarb_for_Adults__c</fullName>
        <label>Polycarb for Adults</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Polycarb_for_Kids__c</fullName>
        <label>Polycarb for Kids</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_AR_Copay__c</fullName>
        <label>Standard AR Copay</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Progressive__c</fullName>
        <label>Standard Progressive</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tint__c</fullName>
        <label>Tint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UV_Copay__c</fullName>
        <label>UV Copay</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Standard Plan Discount</label>
    <pluralLabel>Standard Plan Discounts</pluralLabel>
</CustomObject>